# circt-mockturtle-plugin

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
circt-mockturtle-opt/: CMakeLists.txt  circt-mockturtle-opt.cpp
circt-mockturtle-plugin/: CMakeLists.txt
circt-synth-formal/: CMakeLists.txt  README.md
circt-synth-formal-exp/: CMakeLists.txt  circt.patch
circt-synth-formal-exp/circt-fraig-lec/: BMCPDR.cpp  BMCPDR.h  BTOR2Importer.cpp  Counterexample.cpp  Counterexample.h  LowerLECToMiter.cpp  MiterUtils.cpp  PruneNonMiterModules.cpp
circt-synth-formal-exp/scripts/: bench-word-level-hwmc.sh
circt-synth-formal-exp/test/: CMakeLists.txt  bench-detail-table.sh  bmc-assert-fails.mlir  bmc-assume-guards-assert.mlir  bmc-k-induction-proves.mlir  btor2-array-eq-import.btor2  btor2-constant-init-rem-zero.btor2  btor2-div-zero-safe.btor2  btor2-pdr-delayed-unsafe.btor2  btor2-pdr-divs-width7-safe.btor2  btor2-pdr-empty-constraint-safe.btor2  btor2-pdr-empty-initial-constraint-safe.btor2  btor2-pdr-huge-array-unsupported.btor2  btor2-pdr-input-counterexample.btor2  btor2-pdr-modu-safe.btor2  btor2-pdr-unsupported-comb.btor2  btor2-pdr-wide-unsafe.btor2  btor2-recurrence-complete.btor2  btor2-signed-ref-ops.btor2  btor2-state-fails.btor2  commuted-add.mlir  instance-sequential-equivalent.mlir  instance-sequential-next-mismatch.mlir  lit.cfg.py  lit.site.cfg.py.in  pass-lower-to-miter.mlir  pass-match-registers.mlir  pass-stateless-seq-clock.mlir  sequential-equivalent.mlir
circt-synth-formal/circt-fraig-lec/: CMakeLists.txt  InlineInstanceLayer.cpp  LowerBMCToMiter.cpp  Passes.h
include/: CMakeLists.txt
include/CIRCTMockturtle/: CIRCTMockturtlePasses.h  CIRCTMockturtlePasses.td  CMakeLists.txt
include/CIRCTQuery/: Json.h  Mcp.h  Service.h  Types.h
include/CIRCTSynthFormal/: BTOR2Importer.h  CIRCTSynthFormalPasses.h  CIRCTSynthFormalPasses.td  CIRCTSynthFormalTranslations.h  CMakeLists.txt  MiterUtils.h
lib/: CMakeLists.txt
lib/CIRCTMockturtle/: CIRCTMockturtlePasses.cpp  CMakeLists.txt  Emap.cpp  MockturtlePasses.cpp  NetworkConversion.cpp  NetworkConversion.h  TranslateToCpp.cpp
lib/CIRCTMockturtle/Bindings/: Bind.cpp
lib/CIRCTMockturtle/fmt/: format.h
lib/CIRCTQuery/: CMakeLists.txt  Json.cpp  Mcp.cpp  Model.cpp  Service.cpp  Types.cpp
lib/CIRCTSynthFormal/: BMCPDR.cpp  BTOR2Importer.cpp  CMakeLists.txt  Counterexample.cpp  InlineInstanceLayer.cpp  LowerBMCToMiter.cpp  LowerLECToMiter.cpp  MatchRegisters.cpp  MiterUtils.cpp  PruneNonMiterModules.cpp  ResolveChoices.cpp  Translations.cpp
plugins/: CMakeLists.txt
plugins/circt-experiment-plugin/: CMakeLists.txt  circt-experiment-plugin.cpp
plugins/circt-mockturtle-plugin/: CMakeLists.txt  circt-mockturtle-plugin.cpp
scripts/: mockturtle_lec_fuzz.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CIRCTFraigLEC/: add-vs-xor.mlir  bench-detail-table.sh  bmc-assume-path-prefix.mlir  bmc-k-induction-fails.mlir  bmc-register-unroll.mlir  btor2-array-safe.btor2  btor2-comb-safe.btor2  btor2-constant-init-div-zero.btor2  btor2-constant-init-expression.btor2  btor2-import-comb.btor2  btor2-pdr-array-inject-safe.btor2  btor2-pdr-divu-safe.btor2  btor2-pdr-functional-reduction-cycle.btor2  btor2-pdr-initial-unsafe.btor2  btor2-pdr-mul-safe.btor2  btor2-pdr-relational-init-safe.btor2  btor2-pdr-replicate-safe.btor2  btor2-pdr-safe.btor2  btor2-pdr-unsafe.btor2  btor2-pdr-wide-array-inject-unsupported.btor2  btor2-recurrence-incomplete.btor2  btor2-to-mlir.mlir  counterexample-btor2-array.btor2  counterexample-lec.mlir  instance-equivalent.mlir  pass-array-registers.mlir  pass-inline-forward-reference.mlir  pass-inline-instance-layer.mlir  pass-lower-bmc-to-miter.mlir  pass-prune-non-miters.mlir  report-output-mismatch.mlir  report-register-mismatch.mlir  sequential-next-mismatch.mlir
test/CIRCTFraigLEC/Inputs/: comb.btor2
test/CIRCTMockturtle/: aig-stats.mlir  aig-to-graph.mlir  binding-passes.mlir  comb-dialect.mlir  constant-export.mlir  mockturtle-cpp-translation.mlir
tools/: CMakeLists.txt
tools/circt-experiment-opt/: CMakeLists.txt  circt-experiment-opt.cpp
tools/circt-experiment-translate/: CMakeLists.txt  circt-experiment-translate.cpp
tools/circt-mcp/: CMakeLists.txt  main.cpp
tools/circt-mockturtle-opt/: CMakeLists.txt
tools/circt-mockturtle-translate/: CMakeLists.txt  circt-mockturtle-translate.cpp
tools/circt-query/: CMakeLists.txt  main.cpp
tools/circt-synth-formal/circt-fraig-lec/: CMakeLists.txt  MatchRegisters.cpp  Passes.td  ResolveChoices.cpp  circt-fraig-lec.cpp
